third_party/rust/chromium_crates_io/vendor/cxx-1.0.131/tests/ui/enum_out_of_bounds.stderr
error: discriminant value `18446744073709551615` is outside the limits of u32
 --> tests/ui/enum_out_of_bounds.rs:5:9
  |
5 |         A = 0xFFFF_FFFF_FFFF_FFFF,
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^

error: discriminant value `2000` is outside the limits of u8
 --> tests/ui/enum_out_of_bounds.rs:9:9
  |
9 |         B = 1u8,
  |         ^^^^^^^
